--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "inngest": "^3.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20.5.2",
-    "tsx": "^4.7.3",
-    "typescript": "^5.1.6"
-  }
+  "@types/node": "^20.5.2",
+  "@types/express": "^4.17.21",
+  "tsx": "^4.7.3",
+  "typescript": "^5.1.6"
+}
+
 }
