New files from Fly.io Launch

--- a/fly.toml
+++ b/fly.toml
@@ -1,11 +1,23 @@
-app = "fly-io-inngest"   # replace with your app name
+# fly.toml app configuration file generated for fly-io-inngest on 2025-08-21T21:58:20Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-[env]
-  PORT = "8080"
+app = 'fly-io-inngest'
+primary_region = 'sin'
+
+[build]
 
 [http_service]
-  internal_port = 8080
+  internal_port = 3000
   force_https = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
-  auto_stop_machines = false
-  min_machines_running = 1
+  min_machines_running = 0
+  processes = ['app']
+
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 1024
